--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     	<!--photo taking page-->
         <section data-role="page" id="cameraPage">
         	<!--display current photo-->
-            <div id="canvasDiv"></div>
+            <div id="canvasDiv">
+            	<canvas id="full"></canvas><br/>
+            	<canvas id="thumb"></canvas>
+            </div>
             <form>
                 <input type="text" id="textInput" placeholder="Type Something"><br>
                 <input type="radio" name="umm" value="Top">Top<br>
@@ -28,8 +31,8 @@
         
         <!--photo list page-->
         <section data-role="page" id="listPage">
-        	<p>This page fetches thumbnails of all images</p>
-            <div data-role="listview"></div>
+            <div data-role="listview">
+            </div>
         </section>
         
         <!-- always display the overlay between a page and modal -->
@@ -86,7 +89,7 @@
     <script type="text/javascript" src="events/hammer.js"></script>
     <script src="events/ajax.js"></script>
     <script src="events/listPhoto.js"></script>
-    <!--<script src="events/takePhoto.js"></script>-->
+    <script src="events/takePhoto.js"></script>
     <!--<script src="events/events.js"></script>-->
 </body>
 </html>
